--- a/index.html
+++ b/index.html
@@ -36,23 +36,12 @@
 
             <div class="caja2">
                 <div id="carouselCaja">
-                    <div id="carousel">
-                        <div class="cajaImg">
-                            <img src="img/imagen css.png" alt="">
-                        </div>
-                        <div class="cajaImg">
-                            <img src="img/imagen html.jpg" alt="">
-                        </div>
-                        <div class="cajaImg">
-                            <img src="img/imagen js.png" alt="">
-                        </div>
-                    </div>
-
+                    <img id="carousel" src="img/imagen css.png" alt="Imagen del carrusel">
                 </div>
-                <button class="btnRet"></button>
-                <button class="btnAvn"></button>
-
+                <button class="btnRet" onclick="moveRight()"></button>
+                <button class="btnAvn" onclick="moveLeft()"></button>
             </div>
+
 
         </div>
 
